--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
             <div class="skill">
                 <img src="/Images/PowerPoint.png" alt="PowerPoint">
-                <p>Microsoft PowerPoint</p>
+                <p> PowerPoint</p>
             </div>
             <div class="skill">
                 <img src="/Images/Picsart.png" alt="Git VCS">
@@ -260,12 +260,12 @@
                 <p>Chat Gpt</p>
             </div>
             <div class="skill">
-                <img src="/Images/Word.png" alt="Word">
-                <p>Microsoft Word</p>
+                <img src="/Images/netlify.png" alt="Word">
+                <p>Netlify</p>
             </div>
             <div class="skill">
                 <img src="/Images/PowerPoint.png" alt="PowerPoint">
-                <p>Microsoft PowerPoint</p>
+                <p>PowerPoint</p>
             </div>
             <div class="skill">
                 <img src="/Images/Git VCS.png" alt="Git VCS">
@@ -286,14 +286,14 @@
                 <h2>Bachelor of Technology in Information Technology and Engineering</h2>
                 <p>Haldia Institute of Technology</p>
                 <p>2024-2027 | Pursuing</p>
-                <a href="#" class="btn" id="marksheet">Marksheet</a>
+                <!-- <a href="#" class="btn" id="marksheet">Marksheet</a> -->
             </div>
             <div class="edu">
                 <img src="/Images/deulia-hiraram-high-school-deulia-midnapore-schools-333eh9dbw7.avif" alt="Word">
                 <h2>Higher Secondary | Science</h2>
                 <p>Deulia Hiraram High School | West Bengal Board</p>
                 <p>2021-2023 | Completed</p>
-                <a href="#" class="btn" id="marksheet">Marksheet</a>
+                <!-- <a href="#" class="btn" id="marksheet">Marksheet</a> -->
             </div>
         </div>
 
