--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Soumyajit Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="icon" type="image/x-icon" href="Images/aboutme.jpg">
 </head>
 <body>
     
