--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
                 </div>
             </div>
             <div class="row">
-                <img src="Images/netflixpic.jpg" alt="">
+                <img src="Images/Amazon4.jpg" alt="">
                 <div class="layer">
-                    <h5>Netflix Login Page</h5>
+                    <h5>Amazon-Webclone Login Page</h5>
                     <p>Check out</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
