--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
     </section>
     <!----Service Section------->
+    
     <section class="services" id="services">
         <div class="main-text">
             <h2><span>My </span>Services!</h2>
@@ -285,6 +286,7 @@
             </div>
         </div>
     </section>
+    <!----contact section---->
     <section class="contact" id="contact">
         <div class="contact-text">
             <h2> Get in<span> Touch!</span></h2>
