Postman API skill add

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                 <p>WordPress</p>
             </div>
             <div class="skill">
-                <img src="/Images/Git VCS.png" alt="Git VCS" loading="lazy" >
-                <p>Git VCS</p>
+                <img src="/Images/postman.png" alt="postman" loading="lazy" >
+                <p>Postman APIs</p>
             </div>
         </div>
     </section>
