Amazon repository created

--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
                 <img src="Images/Amazon4.jpg" alt="" loading="lazy" >
                 <div class="layer">
                     <h5>Amazon-Webclone Login Page</h5>
-                    <p>Check out</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <p>Repository</p>
+                    <a href="https://github.com/leo-soumyajit/Amazon-UI"target="_main"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <!-- <div class="row">
