--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!------Header section------------>
     <header>
-        <a href="#home" class="logo" >Soumya<span>jit</span></a>
+        <a href="#home" class="logo">< / Soumya<span>jit ></span></a>
         <ul class="navbar">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About me</a></li>
