Profile pic's background changed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         
         <div class="profile-picture">
-            <img src="Images/profilePic2.png" alt="Profile Picture">
+            <img src="Images/profilepic4.png" alt="Profile Picture">
         </div>
        
     </section>
