Swagger image updated

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             <p>OOPs</p>
           </div>
           <div class="skill">
-            <img src="/Images/C++2.png" alt="C++" loading="lazy">
-            <p>C++</p>
+            <img src="/Images/swagger.png" alt="swagger" loading="lazy">
+            <p>Swagger</p>
           </div>
           <div class="skill">
             <img src="/Images/SpringBoot.png" alt="Git VCS" loading="lazy">
