Linux and Python and Git vcs Logo added

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
             <p>CSS3</p>
           </div>
           <div class="skill">
-            <img src="/Images/JavaScript.png" alt="JavaScript" loading="lazy">
-            <p>JavaScript</p>
+            <img src="/Images/pythonLogo.png" alt="Python" loading="lazy">
+            <p>Python</p>
           </div>
           <div class="skill">
             <img src="/Images/Java.png" alt="java" loading="lazy">
@@ -231,7 +231,7 @@
             <p>Swagger</p>
           </div>
           <div class="skill">
-            <img src="/Images/SpringBoot.png" alt="Git VCS" loading="lazy">
+            <img src="/Images/SpringBoot.png" alt="Spring boot" loading="lazy">
             <p>Spring boot</p>
           </div>
         </div>
@@ -247,11 +247,11 @@
           </div>
           <div class="skill">
             <img src="/Images/PowerPoint.png" alt="PowerPoint" loading="lazy">
-            <p> PowerPoint</p>
+            <p>PowerPoint</p>
           </div>
           <div class="skill">
-            <img src="/Images/Picsart.png" alt="Picsart" loading="lazy">
-            <p>Picsart</p>
+            <img src="/Images/linuxLogomain.png" alt="Linux" loading="lazy">
+            <p>Linux</p>
           </div>
         </div>
 
@@ -269,8 +269,8 @@
             <p>Netlify</p>
           </div>
           <div class="skill">
-            <img src="/Images/PowerPoint.png" alt="PowerPoint" loading="lazy">
-            <p>PowerPoint</p>
+            <img src="/Images/Git VCS.png" alt="PowerPoint" loading="lazy">
+            <p>Git VCS</p>
           </div>
         </div>
 
