HotelBooking backend app added in replace of Netflix signup page

--- a/index.html
+++ b/index.html
@@ -365,11 +365,11 @@
         </div>
       </div>
       <div class="row">
-        <img src="Images/netflixpic.jpg" alt="" loading="lazy">
+        <img src="Images/hotelBookingWeb_enhanced.jpg" alt="" loading="lazy">
         <div class="layer">
-          <h5>Netflix Login Page</h5>
-          <p>Check out</p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <h5>A Complete HotelBooking and Management Backend based on Spring Boot , Postgres SQL</h5>
+          <p>Repository</p>
+          <a href="https://github.com/leo-soumyajit/HotelBooking-Backend" target="_main"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
       <div class="row">
