My About changes

--- a/index.html
+++ b/index.html
@@ -55,24 +55,25 @@
         <span class="one">Hello</span>
         <span class="two">I'm</span>
       </div>
-      <h1 class="myname">Soumya<span>jit</span> Banerjee</h1>
+      <b><h1 class="myname">Soumya<span>jit</span> Banerjee</h1></b>
 
 
       <!-- <div>
                 <h3>Backend<span> Developer</span></h3>
             </div> -->
       <div class="wrapper">
-        <div class="static-txt">I'm a</div>
+        <div class="static-txt">I'm into</div>
         <ul class="dynamic-txts">
-          <li><span>Backend-Developer</span></li>
-          <li><span>Designer</span></li>
-          <li><span>Editor</span></li>
-          <li><span>Photographer</span></li>
+          <li><span>APIs Development</span></li>
+          <li><span>Java Spring Boot Development</span></li>
+          <li><span>Database Schema Designing</span></li>
+          <li><span>RESTful Best Practices</span></li>
+          <li><span>API Security (JWT | OAuth)</span></li>  
+          <li><span>Backend Development</span></li>
         </ul>
       </div>
 
-      <p>I am currently persuing B.Tech in Information Technology from Haldia Institute of Technology.<br> I currently
-        skilled up myself in web development and further wanna become Java developer.
+      <p>I am 2nd year Information Technology student from Haldia Institute of Technology.<br>I have currently skilled up myself in Java Spring Boot Development.
       </p>
       <div class="button">
         <a href="#about" class="btn">About me</a>
@@ -125,13 +126,14 @@
     <div class="about-text">
 
       <h2>About<span> Me!</span></h2>
-      <h4>Backend <span>Developer</span></h4>
-      <p>I am currently persuing B.Tech in Information Technology from Haldia Institute of Technology. I currently
-        skilled up myself in web development and further wanna become frontend+backend developer.
+      <h4>Aspiring Tech Innovator | Java <span>Spring Boot Developer</span></h4>
+      <p>Hi there! I’m <b>Soumyajit Banerjee</b>, currently pursuing my B.Tech in Information Technology at Haldia Institute of Technology. From a young age, I’ve always been driven by a relentless curiosity—one that saw me constantly dismantling and reassembling my toys just to understand how they work. This innate curiosity naturally led me to the fascinating world of coding and web development.
 
-        From a young age, I was always the one who was constantly dismantling and reassembling my toys to see how they
-        work. That curiosity eventually led me to the world of coding and web development, where I discovered the joy of
-        creating and problem-solving through code.</p>
+        I've honed my skills as a Java Spring Boot developer, a journey that has been both challenging and immensely rewarding. I thrive on creating efficient, scalable backend solutions and relish the problem-solving aspect of coding. Whether it’s debugging a tricky piece of code or architecting a robust backend system, I find joy in every step of the process.
+        
+        As I continue my journey, I am eager to learn more, innovate, and make a significant impact in the tech industry. I’m passionate about using technology to solve real-world problems and am always on the lookout for opportunities to collaborate and grow.
+        
+        Let’s connect and create something amazing together!.</p>
       <p id="Email">banerjeesoumyajit2005@gmail.com</p>
       <p id="Place">Kolaghat, India - 721154</p>
       <a href="#" class="btn" id="resume">Resume</a>
