logo changed for Wordpress -> AWS

--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
             <p>Github</p>
           </div>
           <div class="skill">
-            <img src="/Images/wordpress-logo-wordpress-icon-transparent-png-free-vector-removebg-preview.png"
+            <img src="/Images/awsLogo-removebg-preview.png"
               alt="WordPress" loading="lazy">
-            <p>WordPress</p>
+            <p>AWS</p>
           </div>
           <div class="skill">
             <img src="/Images/postman.png" alt="postman" loading="lazy">
