--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         Let’s connect and create something amazing together!.</p>
       <p id="Email">banerjeesoumyajit2005@gmail.com</p>
       <p id="Place">Kolaghat, India - 721154</p>
-      <a href="#" class="btn" id="resume">Resume</a>
+      <a href="Resume/MyResumeSoumyajit Banerjee.pdf" target="_blank" class="btn" id="resume">Resume</a>
       <a href="#" class="btn">More About</a>
     </div>
   </section>
