--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
 
 
-  <section class="home" id="home">
+  <section class="home" id="homee">
     <div class="home-text">
       <div clss="slide">
         <span class="one">Hello</span>
@@ -494,6 +494,11 @@
     </div>
   </footer>
 
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
