Redis logo added

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
             <p>Microsoft Excel</p>
           </div>
           <div class="skill">
-            <img src="/Images/Word.png" alt="Word" loading="lazy">
-            <p>Microsoft Word</p>
+            <img src="/Images/redisLogo.png" alt="Redis" loading="lazy">
+            <p>Redis</p>
           </div>
           <div class="skill">
             <img src="/Images/PowerPoint.png" alt="PowerPoint" loading="lazy">
