project section style modified

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
     </div>
     <div class="portfolio-content">
       <div class="row">
-        <img src="Images/mentorwb.jpeg" alt="" loading="lazy">
+        <img src="Images/MacMentorConnect.png" alt="" loading="lazy">
         <div class="layer">
           <h5>Mentoring Website</h5>
           <p>Check out</p>
@@ -367,27 +367,27 @@
         </div>
       </div>
       <div class="row">
-        <img src="Images/hotelBookingWeb_enhanced.jpg" alt="" loading="lazy">
+        <img src="Images/MacHotelBooking.png" alt="" loading="lazy">
         <div class="layer">
-          <h5>A Complete HotelBooking and Management Backend based on Spring Boot , Postgres SQL</h5>
+          <h5>A Complete HotelBooking and Management Backend with Authentication build with Spring Boot, Postgres SQL</h5>
           <p>Repository</p>
           <a href="https://github.com/leo-soumyajit/HotelBooking-Backend" target="_main"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
       <div class="row">
-        <img src="Images/Zomato.jpg" alt="" loading="lazy">
+        <img src="Images/MacCodeEditot.png" alt="" loading="lazy">
         <div class="layer">
-          <h5>Zomato Landing Page</h5>
+          <h5>Nocturne IDE, is a Ai powered online code editor.features like Code Analyser, Auto Correct, And AI chatsection. Build with Spring Boot and Html, CSS, JS, My SQL</h5>
           <p>Repository</p>
-          <a href="https://github.com/leo-soumyajit/Zomato-UI" target="_main"><i class='bx bx-link-external'></i></a>
+          <a href="https://github.com/leo-soumyajit/Code-Editor" target="_main"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
       <div class="row">
-        <img src="Images/Amazon4.jpg" alt="" loading="lazy">
+        <img src="Images/macNewsly.png" alt="" loading="lazy">
         <div class="layer">
-          <h5>Amazon-Webclone Login Page</h5>
+          <h5>Newsly, A social based news blogging backend application build with Spring Boot, Spring Sequrity, My SQL, Claudinery</h5>
           <p>Repository</p>
-          <a href="https://github.com/leo-soumyajit/Amazon-UI" target="_main"><i class='bx bx-link-external'></i></a>
+          <a href="https://github.com/leo-soumyajit/NewsSocialMedia" target="_main"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
       <!-- <div class="row">
