Heading section style changed

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 
   <section class="skills" id="skills">
-    <div class="main-text" id="skill-text">
+    <div class="main-text" id="">
       <h2><span>Skills & </span>Abilities!</h2>
     </div>
 
