ELK stack image added

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <p>Redis</p>
           </div>
           <div class="skill">
-            <img src="/Images/PowerPoint.png" alt="PowerPoint" loading="lazy">
-            <p>PowerPoint</p>
+            <img src="/Images/ELK_stack-removebg-preview.png" alt="elk stack" loading="lazy">
+            <p>ELK Stack</p>
           </div>
           <div class="skill">
             <img src="/Images/linuxLogomain.png" alt="Linux" loading="lazy">
