certificate section added

--- a/index.html
+++ b/index.html
@@ -322,6 +322,77 @@
       </div>
   </section>
 
+
+  <section class="certificates-section">
+    <div class="main-text" id="Certificate">
+      <h2>Licenses<span> & Certifications</span></h2>
+    </div>
+    <div class="cert-grid">
+      
+      <div class="cert-card">
+        <img src="certificates/springboot0-1.png" alt="Certificate 1" class="cert-img">
+        <div class="cert-title">Spring Boot 0 To 1 - Fundamentals</div>
+        <div class="cert-issuer">Coding Shuttle</div>
+        <div class="cert-date">Issued: February 22, 2025</div>
+      </div>
+
+      <div class="cert-card">
+        <img src="certificates/HTMLCSS0toHero.png" alt="Certificate 2" class="cert-img">
+        <div class="cert-title">JavaScript Algorithms & Data Structures</div>
+        <div class="cert-issuer">Coursera</div>
+        <div class="cert-date">Issued: Tue 14th May 2024</div>
+      </div>
+
+      <div class="cert-card">
+        <img src="certificates/Java.png" alt="Certificate 2" class="cert-img">
+        <div class="cert-title">Java Bootcamp</div>
+        <div class="cert-issuer">LetsUpgrade</div>
+        <div class="cert-date">Issued: Wed 22nd May 2024</div>
+      </div>
+
+      <div class="cert-card">
+        <img src="certificates/tarugardenCloudComputing.jpg" alt="Certificate 2" class="cert-img">
+        <div class="cert-title">Briding The Gap 2.0 Cloud Computing</div>
+        <div class="cert-issuer">TaruGuardians</div>
+        <div class="cert-date">Issued: May 2024</div>
+      </div>
+      <div class="cert-card">
+        <img src="certificates/Agile.png" alt="Certificate 2" class="cert-img">
+        <div class="cert-title">Software Engineering and Agile software development
+        </div>
+        <div class="cert-issuer">Infosys SpringBoard</div>
+        <div class="cert-date">Issued: September 23, 2024</div>
+      </div>
+      <div class="cert-card">
+        <img src="certificates/devopsFoundationCource.png" alt="Certificate 2" class="cert-img">
+        <div class="cert-title">DevOps Foundation Certification
+        </div>
+        <div class="cert-issuer">Infosys SpringBoard</div>
+        <div class="cert-date">Issued: October 1, 2024</div>
+      </div>
+
+      <!-- Add more cert-card blocks here -->
+
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!----Education---->
   <section class="Education" id="education">
 
