--- a/index.html
+++ b/index.html
@@ -331,66 +331,76 @@
       <h2>Licenses<span> & Certifications</span></h2>
     </div>
     <div class="cert-grid">
-      
+  
       <div class="cert-card">
-        <img src="certificates/springboot0-1.png" alt="Certificate 1" class="cert-img">
+        <div class="image-wrapper">
+          <img src="certificates/springboot0-1.png" alt="Certificate 1" class="cert-img">
+          <span class="eye-icon" onclick="openModal('certificates/springboot0-1.png')">&#128065;</span>
+        </div>
         <div class="cert-title">Spring Boot 0 To 1 - Fundamentals</div>
-        <span class="eye-icon" onclick="openModal('certificates/springboot0-1.png')">&#128065;</span>
         <div class="cert-issuer">Coding Shuttle</div>
         <div class="cert-date">Issued: February 22, 2025</div>
       </div>
-
+  
       <div class="cert-card">
-        <img src="certificates/HTMLCSS0toHero.png" alt="Certificate 2" class="cert-img">
+        <div class="image-wrapper">
+          <img src="certificates/HTMLCSS0toHero.png" alt="Certificate 2" class="cert-img">
+          <span class="eye-icon" onclick="openModal('certificates/HTMLCSS0toHero.png')">&#128065;</span>
+        </div>
         <div class="cert-title">HTML & CSS Zero to Hero in 3 Days</div>
-        <span class="eye-icon" onclick="openModal('certificates/HTMLCSS0toHero.png')">&#128065;</span>
         <div class="cert-issuer">Coursera</div>
         <div class="cert-date">Issued: Tue 14th May 2024</div>
       </div>
-
+  
       <div class="cert-card">
-        <img src="certificates/Java.png" alt="Certificate 2" class="cert-img">
-        <span class="eye-icon" onclick="openModal('certificates/Java.png')">&#128065;</span>
+        <div class="image-wrapper">
+          <img src="certificates/Java.png" alt="Certificate 3" class="cert-img">
+          <span class="eye-icon" onclick="openModal('certificates/Java.png')">&#128065;</span>
+        </div>
         <div class="cert-title">Java Bootcamp</div>
         <div class="cert-issuer">LetsUpgrade</div>
         <div class="cert-date">Issued: Wed 22nd May 2024</div>
       </div>
-
+  
       <div class="cert-card">
-        <img src="certificates/Python.jpg" alt="Certificate 2" class="cert-img">
-        <span class="eye-icon" onclick="openModal('certificates/Python.jpg')">&#128065;</span>
+        <div class="image-wrapper">
+          <img src="certificates/Python.jpg" alt="Certificate 4" class="cert-img">
+          <span class="eye-icon" onclick="openModal('certificates/Python.jpg')">&#128065;</span>
+        </div>
         <div class="cert-title">Introduction to Python: Fundamentals</div>
         <div class="cert-issuer">Microsoft</div>
         <div class="cert-date">Issued: January 2025</div>
       </div>
+  
       <div class="cert-card">
-        <img src="certificates/Agile.png" alt="Certificate 2" class="cert-img">
-        <span class="eye-icon" onclick="openModal('certificates/Agile.png')">&#128065;</span>
-        <div class="cert-title">Software Engineering and Agile software development
+        <div class="image-wrapper">
+          <img src="certificates/Agile.png" alt="Certificate 5" class="cert-img">
+          <span class="eye-icon" onclick="openModal('certificates/Agile.png')">&#128065;</span>
         </div>
+        <div class="cert-title">Software Engineering and Agile software development</div>
         <div class="cert-issuer">Infosys SpringBoard</div>
         <div class="cert-date">Issued: September 23, 2024</div>
       </div>
+  
       <div class="cert-card">
-        <img src="certificates/devopsFoundationCource.png" alt="Certificate 2" class="cert-img">
-        <span class="eye-icon" onclick="openModal('certificates/devopsFoundationCource.png')">&#128065;</span>
-        <div class="cert-title">DevOps Foundation Certification
+        <div class="image-wrapper">
+          <img src="certificates/devopsFoundationCource.png" alt="Certificate 6" class="cert-img">
+          <span class="eye-icon" onclick="openModal('certificates/devopsFoundationCource.png')">&#128065;</span>
         </div>
+        <div class="cert-title">DevOps Foundation Certification</div>
         <div class="cert-issuer">Infosys SpringBoard</div>
         <div class="cert-date">Issued: October 1, 2024</div>
       </div>
-
-      <!-- Add more cert-card blocks here -->
-
-
-<!-- Modal -->
-<div id="cert-modal" class="modal" onclick="closeModal()">
-  <span class="close-btn" onclick="closeModal()">✖</span>
-  <img id="modal-img" class="modal-content" alt="Full Certificate">
-</div>
-
+  
+      <!-- Modal -->
+      <div id="cert-modal" class="modal" onclick="closeModal()">
+        <span class="close-btn" onclick="closeModal()">✖</span>
+        <img id="modal-img" class="modal-content" alt="Full Certificate">
+      </div>
+  
     </div>
   </section>
+  
 
 
 
