Im into changes

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <li><span>APIs Development</span></li>
           <li><span>Java Spring Boot Development</span></li>
           <li><span>Database Schema Designing</span></li>
-          <li><span>RESTful Best Practices</span></li>
-          <li><span>API Security (JWT | OAuth)</span></li>  
+          <li><span>Microservice and Monotholic architecture</span></li>
+          <li><span></span></li>  
           <li><span>Backend Development</span></li>
         </ul>
       </div>
